--- a/angular.json
+++ b/angular.json
@@ -65,8 +65,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "clinic-web:build:production",
-              "port": 8080
+              "browserTarget": "clinic-web:build:production"
             },
             "development": {
               "browserTarget": "clinic-web:build:development"
