--- a/.github/workflows/main_clinic-web.yml
+++ b/.github/workflows/main_clinic-web.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          #npm run test --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -57,5 +57,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'clinic-web'
-          package: ./dist/clinic-web
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AC8C5667F08F4798AFBA522F8E87BA36 }}
+          slot-name: 'Production'
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_909EED05AF71445697EB28625F916CCC }}
